Add display solution.

--- a/source/myqtapp.ui
+++ b/source/myqtapp.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>438</width>
-    <height>329</height>
+    <width>354</width>
+    <height>333</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>10</y>
-     <width>421</width>
-     <height>311</height>
+     <y>20</y>
+     <width>331</width>
+     <height>301</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -103,6 +103,9 @@
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QSpinBox" name="antsBox">
+          <property name="maximum">
+           <number>99999</number>
+          </property>
           <property name="value">
            <number>10</number>
           </property>
@@ -110,6 +113,9 @@
         </item>
         <item>
          <widget class="QSpinBox" name="iterationsBox">
+          <property name="maximum">
+           <number>9999</number>
+          </property>
           <property name="value">
            <number>10</number>
           </property>
@@ -145,6 +151,9 @@
         </item>
         <item>
          <widget class="QDoubleSpinBox" name="evapBox">
+          <property name="maximum">
+           <double>1.000000000000000</double>
+          </property>
           <property name="value">
            <double>0.900000000000000</double>
           </property>
@@ -155,32 +164,24 @@
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <widget class="QLabel" name="timeLabel">
+         <widget class="QTextEdit" name="solutionText"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="solveBut">
           <property name="text">
-           <string>Time elapsed</string>
+           <string>Solve</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QTextEdit" name="solutionText"/>
+         <widget class="QPushButton" name="clearBut">
+          <property name="text">
+           <string>Clear</string>
+          </property>
+         </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <item>
-           <widget class="QPushButton" name="solveBut">
-            <property name="text">
-             <string>Solve</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="clearBut">
-            <property name="text">
-             <string>Clear</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
+         <layout class="QHBoxLayout" name="horizontalLayout_3"/>
         </item>
        </layout>
       </item>
